# exercise_segment_api

./: CMakeLists.txt  ExerciseSegmentAPI.podspec  android_build_script.sh  test_calibration_fix.c  test_detailed_leg_comparison  test_detailed_leg_comparison.c
examples/: bot.json
include/: calibration.h  segment_api.h
src/: calibration.c  pose_analysis.c  segment_core.c
